--- a/app/src/main/res/layout/trait_labelprint.xml
+++ b/app/src/main/res/layout/trait_labelprint.xml
@@ -74,9 +74,10 @@
 
         <Spinner
             android:id="@+id/textfield"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="200dp" />
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:maxLines="1" />
     </LinearLayout>
 
     <LinearLayout
@@ -95,9 +96,10 @@
 
         <Spinner
             android:id="@+id/textfield2"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="200dp" />
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:maxLines="1" />
     </LinearLayout>
 
     <LinearLayout style="@style/TextViewStyle.Bold"
@@ -116,9 +118,10 @@
 
         <Spinner
             android:id="@+id/textfield3"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="200dp" />
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:maxLines="1" />
     </LinearLayout>
 
     <LinearLayout
@@ -137,9 +140,10 @@
 
         <Spinner
             android:id="@+id/textfield4"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="200dp" />
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:maxLines="1" />
     </LinearLayout>
 
     <LinearLayout
@@ -157,9 +161,10 @@
 
         <Spinner
             android:id="@+id/barcodefield"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:minWidth="200dp" />
+            android:layout_width="0dp"
+            android:layout_weight="3"
+            android:maxLines="1" />
     </LinearLayout>
 
     <LinearLayout
