--- a/app/src/main/res/layout/dialog_geonav_collect.xml
+++ b/app/src/main/res/layout/dialog_geonav_collect.xml
@@ -13,11 +13,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dialog_geonav_collect_auto_navigate"/>
+            android:text="@string/dialog_geonav_collect_auto_navigate"
+            android:layout_weight="1"/>
 
         <CheckBox android:id="@+id/dialog_geonav_collect_auto_navigate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 
@@ -29,7 +30,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/dialog_geonav_collect_notify_on_precision_loss"/>
+            android:text="@string/dialog_geonav_collect_notify_on_precision_loss"
+            android:layout_weight="1"/>
 
         <CheckBox android:id="@+id/dialog_geonav_collect_notify_on_precision_loss"
             android:layout_width="wrap_content"
