fixed layout width warning

--- a/app/src/main/res/layout/dialog_geonav_collect.xml
+++ b/app/src/main/res/layout/dialog_geonav_collect.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/dialog_geonav_collect_auto_navigate"
             android:layout_weight="1"/>
@@ -28,7 +28,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/dialog_geonav_collect_notify_on_precision_loss"
             android:layout_weight="1"/>
