--- a/app/src/main/res/layout/dialog_geonav_collect.xml
+++ b/app/src/main/res/layout/dialog_geonav_collect.xml
@@ -18,7 +18,8 @@
 
         <CheckBox android:id="@+id/dialog_geonav_collect_auto_navigate"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"/>
     </LinearLayout>
 
 
@@ -35,7 +36,8 @@
 
         <CheckBox android:id="@+id/dialog_geonav_collect_notify_on_precision_loss"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"/>
     </LinearLayout>
 
 
