added progress bar to gnss trait when connection drops or location hasn't been received from a source yet
updated connection check interval to 5seconds to work with default emlid settings better

fixed geonav bug making snackbar message reappear

added sound warning when fix requirement is not met

significant gnss trait layout reworks to handle internal GPS sensor better

fix bug in connect thread

updated get location function in collect to retrieve more up to date location

--- a/app/src/main/res/layout/trait_gnss.xml
+++ b/app/src/main/res/layout/trait_gnss.xml
@@ -41,6 +41,17 @@
                 precisionHeader, precisionSpinner"
             tools:visibility="visible" />
 
+        <ProgressBar
+            android:visibility="invisible"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/trait_gnss_pb"
+            android:indeterminate="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="@id/gnss_collect_button"/>
+
         <TextView style="@style/TextViewStyle.Bold"
             android:id="@+id/utcHeader"
             android:layout_width="0dp"
