Add field audio to beta

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -55,5 +55,10 @@
         android:icon="@drawable/numeric_1_box"
         android:showAsAction="always"
         android:title="@string/menu_collect_repeated_values_indicator"/>
+    <item
+        android:id="@+id/field_audio_mic"
+        android:icon="@drawable/ic_tb_field_mic_off"
+        android:showAsAction="always"
+        android:title="@string/menu_collect_field_audio_start" />
 </menu>
 
