adds preference to return to first trait

--- a/app/src/main/res/xml/preferences_behavior.xml
+++ b/app/src/main/res/xml/preferences_behavior.xml
@@ -11,6 +11,13 @@
 
     <CheckBoxPreference
         android:defaultValue="false"
+        android:icon="@drawable/ic_adv_return_first_trait"
+        android:key="ReturnFirst"
+        android:summary="@string/preferences_behavior_return_to_first_trait_description"
+        android:title="@string/preferences_behavior_return_to_first_trait" />
+
+    <CheckBoxPreference
+        android:defaultValue="false"
         android:icon="@drawable/ic_remap_volume_buttons"
         android:key="VOLUME_NAVIGATION"
         android:summary="@string/preferences_behavior_volume_buttons_navigate_description"
