--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <CheckBoxPreference
         android:defaultValue="false"
         android:icon="@drawable/ic_adv_brapi"
         android:key="BRAPI_ENABLED"
+        android:summary="@string/preferences_brapi_enable_summary"
         android:title="@string/preferences_brapi_enable_title" />
+
     <PreferenceCategory
         android:key="brapi_category"
         android:title="@string/preferences_brapi_core_title"
@@ -17,21 +20,21 @@
             android:dialogTitle="@string/brapi_base_url"
             android:icon="@drawable/ic_adv_brapi_base"
             android:key="BRAPI_BASE_URL"
-            app:positiveButtonText="@string/brapi_save_authorize"
+            android:summary="%s"
+            android:title="@string/brapi_base_url"
             app:negativeButtonText="@android:string/cancel"
             app:neutralButtonText="@string/dialog_scan"
-            android:summary="%s"
-            android:title="@string/brapi_base_url" />
+            app:positiveButtonText="@string/brapi_save_authorize" />
 
         <org.phenoapps.sharedpreferences.dialogs.NeutralButtonEditTextDialog
             android:defaultValue="@string/preferences_brapi_server_test"
             android:dialogTitle="@string/brapi_edit_display_name"
             android:icon="@drawable/ic_pref_brapi_name"
             android:key="BRAPI_DISPLAY_NAME"
-            app:positiveButtonText="@android:string/ok"
-            app:negativeButtonText="@android:string/cancel"
             android:summary="%s"
-            android:title="@string/brapi_display_name" />
+            android:title="@string/brapi_display_name"
+            app:negativeButtonText="@android:string/cancel"
+            app:positiveButtonText="@android:string/ok" />
 
         <Preference
             android:icon="@drawable/ic_pref_brapi_logout"
@@ -97,16 +100,16 @@
             android:key="BRAPI_OIDC_URL"
             android:summary="@string/brapi_oidc_url_desc"
             android:title="@string/brapi_oidc_url"
-            app:positiveButtonText="@android:string/ok"
             app:negativeButtonText="@android:string/cancel"
-            app:neutralButtonText="@string/dialog_scan"/>
+            app:neutralButtonText="@string/dialog_scan"
+            app:positiveButtonText="@android:string/ok" />
 
     </PreferenceCategory>
 
     <PreferenceCategory
+        android:key="brapi_variables"
         android:title="@string/preferences_brapi_traits_title"
-        app:iconSpaceReserved="false"
-        android:key="brapi_variables">
+        app:iconSpaceReserved="false">
         <ListPreference
             android:defaultValue="value"
             android:dialogTitle="@string/preferences_appearance_collect_labelval_customize"
