--- a/app/src/main/res/layout/trait_labelprint.xml
+++ b/app/src/main/res/layout/trait_labelprint.xml
@@ -14,10 +14,23 @@
         android:gravity="center"
         android:orientation="horizontal">
 
+        <ImageButton
+            android:id="@+id/connectPrinterButton"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:background="@drawable/custom_round_button"
+            android:gravity="center"
+            android:padding="10dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/connection"
+            android:contentDescription="@string/trait_labelprint_connect_button_description" />
+
         <ImageView
             android:id="@+id/labelPreview"
-            android:layout_width="125dp"
-            android:layout_height="88dp"
+            android:layout_width="150dp"
+            android:layout_height="100dp"
             android:layout_gravity="center"
             android:layout_margin="15dip"
             android:adjustViewBounds="false"
@@ -27,8 +40,8 @@
 
         <ImageButton
             android:id="@+id/printLabelButton"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_gravity="center"
             android:layout_margin="10dp"
             android:background="@drawable/custom_round_button"
