--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -28,11 +28,11 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Field Stats -->
+            <!-- Field Details -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Summary Stats"
+                android:text="Details"
                 android:textStyle="bold"
                 android:textSize="18sp" />
 
@@ -65,6 +65,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Count"
+                android:textSize="18sp"
+                android:layout_marginBottom="16dp" />
+
+            <TextView
+                android:id="@+id/observationLevelTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Observation Level"
                 android:textSize="18sp"
                 android:layout_marginBottom="16dp" />
 
