--- a/app/src/main/res/xml/preferences_brapi.xml
+++ b/app/src/main/res/xml/preferences_brapi.xml
@@ -14,6 +14,11 @@
         android:title="@string/preferences_brapi_core_title"
         app:iconSpaceReserved="false">
 
+        <Preference
+                android:icon="@drawable/ic_trait_barcode"
+                android:key="brapi_config_barcode"
+                android:title="@string/preferences_brapi_code_barcode" />
+
         <org.phenoapps.sharedpreferences.dialogs.NeutralButtonEditTextDialog
             android:defaultValue="@string/brapi_base_url_default"
             android:dialogMessage="@string/brapi_base_url_desc"
