--- a/app/src/main/res/layout/list_item_field.xml
+++ b/app/src/main/res/layout/list_item_field.xml
@@ -10,18 +10,18 @@
 
     <RadioButton
         android:id="@+id/fieldRadio"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_gravity="center_vertical|end"
         android:checked="false"
         android:scaleX="1.1"
         android:scaleY="1.1"
-        android:layout_marginRight="15dp"/>
+        android:layout_marginEnd="15dp"/>
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_weight="1">
 
         <TextView style="@style/TextViewStyle.Bold"
@@ -33,7 +33,7 @@
             android:singleLine="true"
             tools:text="field_sample"/>
 
-        <TextView
+        <TextView style="@style/TextViewStyle.Sub"
             android:id="@+id/observationLevelLbl"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
