--- a/app/src/main/res/layout/fragment_field_detail.xml
+++ b/app/src/main/res/layout/fragment_field_detail.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="16dp">
+        android:padding="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,13 +29,12 @@
             android:orientation="vertical">
 
             <!-- Field Details -->
-            <TextView
+            <TextView style="@style/TextViewStyle.Bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fields_summary"
-                android:textStyle="bold"
-                android:layout_marginBottom="16dp"
-                android:textSize="18sp" />
+                android:textSize="16sp"
+                android:layout_marginBottom="8dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -43,14 +42,14 @@
                 android:orientation="horizontal"
                 android:layout_marginBottom="16dp">
 
-                <TextView style="@style/TextViewStyle.Bold"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:text="@string/fields_import_date"
                     android:textSize="16sp" />
 
-                <TextView
+                <TextView style="@style/TextViewStyle.Bold"
                     android:id="@+id/importDateTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -63,14 +62,14 @@
                 android:orientation="horizontal"
                 android:layout_marginBottom="16dp">
 
-                <TextView style="@style/TextViewStyle.Bold"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:text="@string/fields_last_edit"
                     android:textSize="16sp" />
 
-                <TextView
+                <TextView style="@style/TextViewStyle.Bold"
                     android:id="@+id/editDateTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -83,14 +82,14 @@
                 android:orientation="horizontal"
                 android:layout_marginBottom="16dp">
 
-                <TextView style="@style/TextViewStyle.Bold"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:text="@string/fields_last_export"
                     android:textSize="16sp" />
 
-                <TextView
+                <TextView style="@style/TextViewStyle.Bold"
                     android:id="@+id/exportDateTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -103,19 +102,27 @@
                 android:orientation="horizontal"
                 android:layout_marginBottom="16dp">
 
-                <TextView style="@style/TextViewStyle.Bold"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:text="@string/fields_entry_count"
                     android:textSize="16sp" />
 
-                <TextView
+                <TextView style="@style/TextViewStyle.Bold"
                     android:id="@+id/countTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp" />
             </LinearLayout>
+
+            <!-- BrAPI Specific -->
+            <TextView style="@style/TextViewStyle.Bold"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fields_brapi_details"
+                android:textSize="16sp"
+                android:layout_marginBottom="8dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -123,34 +130,46 @@
                 android:orientation="horizontal"
                 android:layout_marginBottom="16dp">
 
-                <TextView style="@style/TextViewStyle.Bold"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:text="@string/fields_entry_type"
                     android:textSize="16sp" />
 
-                <TextView
+                <TextView style="@style/TextViewStyle.Bold"
                     android:id="@+id/observationLevelTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="16sp" />
+
+                <Button
+                    android:id="@+id/brapiSync"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right|center_vertical"
+                    android:text="@string/brapi_obs_sync_menu_name"
+                    android:textSize="16sp"
+                    android:drawablePadding="8dp"
+                    android:drawableRight="@drawable/ic_field_sync"
+                    android:background="?attr/selectableItemBackgroundBorderless"
+                    android:layout_marginStart="8dp"/>
             </LinearLayout>
 
+
             <!-- Traits Stats -->
-            <TextView
+            <TextView style="@style/TextViewStyle.Bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/fields_trait_statistics"
-                android:textStyle="bold"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
             <LinearLayout
                 android:id="@+id/traitCountsLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="8dp">
+                android:orientation="vertical">
 
             </LinearLayout>
 
