--- a/app/src/main/res/xml/preferences_beta.xml
+++ b/app/src/main/res/xml/preferences_beta.xml
@@ -10,6 +10,6 @@
         android:title="@string/pref_beta_enable_field_audio_title"
         android:summary="@string/pref_beta_enable_field_audio_summary"
         android:defaultValue="false"
-        android:icon="@drawable/ic_beta"/>
+        android:icon="@drawable/ic_tb_field_mic_on"/>
 
 </PreferenceScreen>
