--- a/app/src/main/res/layout/view_range_box.xml
+++ b/app/src/main/res/layout/view_range_box.xml
@@ -4,6 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ProgressBar
+        android:id="@+id/plotsProgressBar"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <ImageView
         android:id="@+id/rangeLeft"
         android:layout_width="wrap_content"
@@ -15,7 +24,7 @@
         android:src="@drawable/chevron_left"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar" />
 
     <ImageView
         android:id="@+id/rangeRight"
@@ -28,7 +37,7 @@
         android:src="@drawable/chevron_right"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar" />
 
     <LinearLayout
         android:id="@+id/namesPlotRangeHolder"
@@ -40,7 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/valuesPlotRangeHolder"
         app:layout_constraintStart_toEndOf="@+id/rangeLeft"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar">
 
         <TextView
             android:id="@+id/rangeName"
@@ -74,7 +83,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/rangeRight"
         app:layout_constraintStart_toEndOf="@id/namesPlotRangeHolder"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/plotsProgressBar">
 
         <EditText
             android:id="@+id/range"
@@ -128,13 +137,5 @@
             android:visibility="gone" />
     </LinearLayout>
 
-    <ProgressBar
-        android:id="@+id/plotsProgressBar"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="?android:attr/progressBarStyleHorizontal"
-        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
